infra/platform/gateway-api/shared-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.lab.sturla.tech"
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.lab.sturla.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lab-sturla-tech-wildcard-tls
